--- a/CPomodoro/centerwidget.ui
+++ b/CPomodoro/centerwidget.ui
@@ -43,19 +43,6 @@
          </rect>
         </property>
        </widget>
-       <widget class="QPushButton" name="pushButton">
-        <property name="geometry">
-         <rect>
-          <x>90</x>
-          <y>60</y>
-          <width>89</width>
-          <height>25</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>PushButton</string>
-        </property>
-       </widget>
       </widget>
      </item>
      <item row="0" column="0">
@@ -73,23 +60,16 @@
         <number>10</number>
        </property>
        <item>
-        <widget class="QToolButton" name="toolButton_2">
+        <widget class="QToolButton" name="startButton">
          <property name="text">
-          <string>...</string>
+          <string>start</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QToolButton" name="toolButton_3">
+        <widget class="QToolButton" name="resetButton">
          <property name="text">
-          <string>...</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QToolButton" name="toolButton">
-         <property name="text">
-          <string>...</string>
+          <string>reset</string>
          </property>
         </widget>
        </item>
