--- a/CPomodoro/centerwidget.ui
+++ b/CPomodoro/centerwidget.ui
@@ -37,11 +37,7 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
-           <widget class="QLabel" name="numberLabel">
-            <property name="text">
-             <string>TextLabel</string>
-            </property>
-           </widget>
+           <widget class="QLCDNumber" name="lcdNumber"/>
           </item>
          </layout>
         </item>
