--- a/CPomodoro/centerwidget.ui
+++ b/CPomodoro/centerwidget.ui
@@ -66,7 +66,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QToolButton" name="resetButton">
+        <widget class="QToolButton" name="stopButton">
          <property name="text">
           <string>reset</string>
          </property>
