--- a/CPomodoro/cmainwindow.ui
+++ b/CPomodoro/cmainwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>CMainWindow</class>
- <widget class="QMainWindow" name="CMainWindow">
+ <class>cmainwindow</class>
+ <widget class="QMainWindow" name="cmainwindow">
   <property name="geometry">
    <rect>
     <x>0</x>
