布局中添加两个控件

--- a/CPomodoro/cmainwidget.ui
+++ b/CPomodoro/cmainwidget.ui
@@ -6,13 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>620</width>
+    <height>374</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <layout class="QVBoxLayout" name="mainLayout"/>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
